<resources>
    <string name="app_name">FirstApp</string>
    <string name="hello">Happy Birthday</string>
    <string name="button">turn into</string>
    <string name="btn">LOGIN</string>
    <string name="action_settings">Setings</string>
    <string name="from">YOUR TOM</string>
    <string name="result">result</string>
    <string name="input">input</string>
    <string name="rbtn">reset</string>
    <string name="btn_3">+3 points</string>
    <string name="btn_2">+2 points</string>
    <string name="btn_1">+1 point</string>
    <string name="hint_text">input RMB</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_won_label">Won</string>
    <string name="btn_opencfg_label">config</string>
    <string name="btn_save_label">save</string>
    <string name="label_open_list">OpenList</string>
    <string name="app_aplic">search</string>
    <string name="hint_key">input key word</string>

</resources>
