<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rate"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateActivity">

    <EditText
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_text"
        android:inputType="numberDecimal"
        android:textSize="36sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/shouOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/btn_dollar_label" />

    <Button
        android:id="@+id/btn_euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/btn_euro_label" />

    <Button
        android:id="@+id/btn_won"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/btn_won_label" />

    <Button
        android:id="@+id/btn_opencfg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="openOne"
        android:text="@string/btn_opencfg_label" />

</LinearLayout>
