<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/inpText"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:ems="10"
        android:hint="请输入摄氏温度"
        android:inputType="number" />

    <TextView
        android:id="@+id/showText"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:cursorVisible="false"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/button" />

</LinearLayout>