<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/btn_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btn_r"
        android:text="@string/rbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.866" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="534dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="542dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/teamA"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="TeamA"
                android:textColor="@color/colorAccent"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/scoreA"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/colorAccent"
                android:textSize="55sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn_A3"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"
                android:onClick="btn_3"
                android:text="@string/btn_3"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_A2"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"
                android:onClick="btn_2"
                android:text="@string/btn_2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_A1"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:background="@color/colorAccent"
                android:onClick="btn_1"
                android:text="@string/btn_1"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="2dp"
            android:layout_height="match_parent"

            android:background="@color/design_default_color_primary" />

        <LinearLayout
            android:id="@+id/LinerarB"
            android:layout_width="0dp"
            android:layout_height="536dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamB"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="TeamB"
                android:textColor="@color/colorPrimary"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/scoreB"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/colorPrimary"
                android:textSize="55sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn_B3"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimary"
                android:onClick="btn_3"
                android:text="@string/btn_3"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_B2"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimary"
                android:onClick="btn_2"
                android:text="@string/btn_2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_B1"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:background="@color/colorPrimary"
                android:onClick="btn_1"
                android:text="@string/btn_1"
                android:textSize="18sp" />

        </LinearLayout>
        <![CDATA[







        >



    ]]>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>